--- a/animals.html
+++ b/animals.html
@@ -73,6 +73,8 @@
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> North-America<br/>
 <strong>Type:</strong> Hound<br/>
+<strong>Lifespan:</strong> 10 to 12 years<br/>
+<strong>Color:</strong> BlackWhiteTan<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -81,6 +83,8 @@
 <strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> Eurasia<br/>
 <strong>Type:</strong> Mammal<br/>
+<strong>Lifespan:</strong> 7 - 10 years<br/>
+<strong>Color:</strong> GreyBlackWhite<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -89,6 +93,8 @@
 <strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> North-America<br/>
 <strong>Type:</strong> mammal<br/>
+<strong>Lifespan:</strong> 10 to 15 years in captivity, seven years in the wild<br/>
+<strong>Color:</strong> RedBlackSilver<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -97,6 +103,8 @@
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> South-America<br/>
 <strong>Type:</strong> Mammal<br/>
+<strong>Lifespan:</strong> Seven years<br/>
+<strong>Color:</strong> GreyRedBlack<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -104,6 +112,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
+<strong>Lifespan:</strong> 10 to 13 years<br/>
+<strong>Color:</strong> BlackWhiteTanMulti-colored<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -111,6 +121,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Africa<br/>
+<strong>Lifespan:</strong> 10 - 14 years<br/>
+<strong>Color:</strong> WhiteCreamSandy<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -119,6 +131,8 @@
 <strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> Africa<br/>
 <strong>Type:</strong> Mammal<br/>
+<strong>Lifespan:</strong> 3 - 11 years<br/>
+<strong>Color:</strong> BrownRedBlackTan<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -126,6 +140,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> North-America<br/>
+<strong>Lifespan:</strong> approximately 20 years<br/>
+<strong>Color:</strong> BrownGreyBeigeChestnut<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -134,6 +150,8 @@
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Central-America<br/>
 <strong>Type:</strong> rodent<br/>
+<strong>Lifespan:</strong> 6-12.6 years<br/>
+<strong>Color:</strong> BrownGrey-Brown<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -141,6 +159,7 @@
 <p class="card__text">
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
+<strong>Lifespan:</strong> 14 years<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -148,6 +167,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Herbivore<br/>
 <strong>Location:</strong> Asia<br/>
+<strong>Lifespan:</strong> unknown<br/>
+<strong>Color:</strong> BlackGold<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -156,6 +177,8 @@
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Central-America<br/>
 <strong>Type:</strong> Mammal<br/>
+<strong>Lifespan:</strong> 6-12 years<br/>
+<strong>Color:</strong> GreyRedBlackWhite<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -164,6 +187,8 @@
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Central-America<br/>
 <strong>Type:</strong> mammal<br/>
+<strong>Lifespan:</strong> seven years in the wild. 12 years in captivity<br/>
+<strong>Color:</strong> GreyYellowBlackWhite<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -172,6 +197,8 @@
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> North-America<br/>
 <strong>Type:</strong> Mammal<br/>
+<strong>Lifespan:</strong> Up to 15 years<br/>
+<strong>Color:</strong> BrownBlackWhite<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -179,6 +206,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Africa<br/>
+<strong>Lifespan:</strong> 2-4 years in the wild, 10-12 in captivity<br/>
+<strong>Color:</strong> BrownGreyRedBlackSilver<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -186,6 +215,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
+<strong>Lifespan:</strong> 12 – 15 years<br/>
+<strong>Color:</strong> BrownBlackWhiteTan<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -194,6 +225,8 @@
 <strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> Asia<br/>
 <strong>Type:</strong> Mammal<br/>
+<strong>Lifespan:</strong> 8-10 years<br/>
+<strong>Color:</strong> GreyTan<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -201,6 +234,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> North-America<br/>
+<strong>Lifespan:</strong> 11-14 years<br/>
+<strong>Color:</strong> BlackWhiteTanChocolate<br/>
 </p>
 </li>
 <li class="cards__item">
@@ -208,6 +243,8 @@
 <p class="card__text">
 <strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
+<strong>Lifespan:</strong> 13 – 14 years<br/>
+<strong>Color:</strong> BlackWhiteTan<br/>
 </p>
 </li>
 
