--- a/animals.html
+++ b/animals.html
@@ -69,183 +69,240 @@
         <ul class="cards">
             <li class="cards__item">
 <div class="card__title">American Foxhound</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Type:</strong> Hound<br/>
-<strong>Lifespan:</strong> 10 to 12 years<br/>
-<strong>Color:</strong> BlackWhiteTan<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> North-America</li>
+<li><strong>Type:</strong> Hound</li>
+<li><strong>Lifespan:</strong> 10 to 12 years</li>
+<li><strong>Color:</strong> BlackWhiteTan</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Arctic Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> Eurasia<br/>
-<strong>Type:</strong> Mammal<br/>
-<strong>Lifespan:</strong> 7 - 10 years<br/>
-<strong>Color:</strong> GreyBlackWhite<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Carnivore</li>
+<li><strong>Location:</strong> Eurasia</li>
+<li><strong>Type:</strong> Mammal</li>
+<li><strong>Lifespan:</strong> 7 - 10 years</li>
+<li><strong>Color:</strong> GreyBlackWhite</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Cross Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Type:</strong> mammal<br/>
-<strong>Lifespan:</strong> 10 to 15 years in captivity, seven years in the wild<br/>
-<strong>Color:</strong> RedBlackSilver<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Carnivore</li>
+<li><strong>Location:</strong> North-America</li>
+<li><strong>Type:</strong> mammal</li>
+<li><strong>Lifespan:</strong> 10 to 15 years in captivity, seven years in the wild</li>
+<li><strong>Color:</strong> RedBlackSilver</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Darwin’s fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> South-America<br/>
-<strong>Type:</strong> Mammal<br/>
-<strong>Lifespan:</strong> Seven years<br/>
-<strong>Color:</strong> GreyRedBlack<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> South-America</li>
+<li><strong>Type:</strong> Mammal</li>
+<li><strong>Lifespan:</strong> Seven years</li>
+<li><strong>Color:</strong> GreyRedBlack</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">English Foxhound</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-<strong>Lifespan:</strong> 10 to 13 years<br/>
-<strong>Color:</strong> BlackWhiteTanMulti-colored<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Europe</li>
+<li><strong>Lifespan:</strong> 10 to 13 years</li>
+<li><strong>Color:</strong> BlackWhiteTanMulti-colored</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Fennec Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Africa<br/>
-<strong>Lifespan:</strong> 10 - 14 years<br/>
-<strong>Color:</strong> WhiteCreamSandy<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Africa</li>
+<li><strong>Lifespan:</strong> 10 - 14 years</li>
+<li><strong>Color:</strong> WhiteCreamSandy</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> Africa<br/>
-<strong>Type:</strong> Mammal<br/>
-<strong>Lifespan:</strong> 3 - 11 years<br/>
-<strong>Color:</strong> BrownRedBlackTan<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Carnivore</li>
+<li><strong>Location:</strong> Africa</li>
+<li><strong>Type:</strong> Mammal</li>
+<li><strong>Lifespan:</strong> 3 - 11 years</li>
+<li><strong>Color:</strong> BrownRedBlackTan</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Fox Snakes</div>
-<p class="card__text">
-<strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Lifespan:</strong> approximately 20 years<br/>
-<strong>Color:</strong> BrownGreyBeigeChestnut<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Carnivore</li>
+<li><strong>Location:</strong> North-America</li>
+<li><strong>Lifespan:</strong> approximately 20 years</li>
+<li><strong>Color:</strong> BrownGreyBeigeChestnut</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Fox Squirrel</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Central-America<br/>
-<strong>Type:</strong> rodent<br/>
-<strong>Lifespan:</strong> 6-12.6 years<br/>
-<strong>Color:</strong> BrownGrey-Brown<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Central-America</li>
+<li><strong>Type:</strong> rodent</li>
+<li><strong>Lifespan:</strong> 6-12.6 years</li>
+<li><strong>Color:</strong> BrownGrey-Brown</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Fox Terrier</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-<strong>Lifespan:</strong> 14 years<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Europe</li>
+<li><strong>Lifespan:</strong> 14 years</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Golden-Crowned Flying Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Herbivore<br/>
-<strong>Location:</strong> Asia<br/>
-<strong>Lifespan:</strong> unknown<br/>
-<strong>Color:</strong> BlackGold<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Herbivore</li>
+<li><strong>Location:</strong> Asia</li>
+<li><strong>Lifespan:</strong> unknown</li>
+<li><strong>Color:</strong> BlackGold</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Gray Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Central-America<br/>
-<strong>Type:</strong> Mammal<br/>
-<strong>Lifespan:</strong> 6-12 years<br/>
-<strong>Color:</strong> GreyRedBlackWhite<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Central-America</li>
+<li><strong>Type:</strong> Mammal</li>
+<li><strong>Lifespan:</strong> 6-12 years</li>
+<li><strong>Color:</strong> GreyRedBlackWhite</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Kit Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Central-America<br/>
-<strong>Type:</strong> mammal<br/>
-<strong>Lifespan:</strong> seven years in the wild. 12 years in captivity<br/>
-<strong>Color:</strong> GreyYellowBlackWhite<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Central-America</li>
+<li><strong>Type:</strong> mammal</li>
+<li><strong>Lifespan:</strong> seven years in the wild. 12 years in captivity</li>
+<li><strong>Color:</strong> GreyYellowBlackWhite</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Marble Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Type:</strong> Mammal<br/>
-<strong>Lifespan:</strong> Up to 15 years<br/>
-<strong>Color:</strong> BrownBlackWhite<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> North-America</li>
+<li><strong>Type:</strong> Mammal</li>
+<li><strong>Lifespan:</strong> Up to 15 years</li>
+<li><strong>Color:</strong> BrownBlackWhite</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Red Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Africa<br/>
-<strong>Lifespan:</strong> 2-4 years in the wild, 10-12 in captivity<br/>
-<strong>Color:</strong> BrownGreyRedBlackSilver<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Africa</li>
+<li><strong>Lifespan:</strong> 2-4 years in the wild, 10-12 in captivity</li>
+<li><strong>Color:</strong> BrownGreyRedBlackSilver</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Smooth Fox Terrier</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-<strong>Lifespan:</strong> 12 – 15 years<br/>
-<strong>Color:</strong> BrownBlackWhiteTan<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Europe</li>
+<li><strong>Lifespan:</strong> 12 – 15 years</li>
+<li><strong>Color:</strong> BrownBlackWhiteTan</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Tibetan Fox</div>
-<p class="card__text">
-<strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> Asia<br/>
-<strong>Type:</strong> Mammal<br/>
-<strong>Lifespan:</strong> 8-10 years<br/>
-<strong>Color:</strong> GreyTan<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Carnivore</li>
+<li><strong>Location:</strong> Asia</li>
+<li><strong>Type:</strong> Mammal</li>
+<li><strong>Lifespan:</strong> 8-10 years</li>
+<li><strong>Color:</strong> GreyTan</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Toy Fox Terrier</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Lifespan:</strong> 11-14 years<br/>
-<strong>Color:</strong> BlackWhiteTanChocolate<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> North-America</li>
+<li><strong>Lifespan:</strong> 11-14 years</li>
+<li><strong>Color:</strong> BlackWhiteTanChocolate</li>
+</ul>
+</div>
 </li>
 <li class="cards__item">
 <div class="card__title">Wire Fox Terrier</div>
-<p class="card__text">
-<strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-<strong>Lifespan:</strong> 13 – 14 years<br/>
-<strong>Color:</strong> BlackWhiteTan<br/>
-</p>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore</li>
+<li><strong>Location:</strong> Europe</li>
+<li><strong>Lifespan:</strong> 13 – 14 years</li>
+<li><strong>Color:</strong> BlackWhiteTan</li>
+</ul>
+</div>
 </li>
 
         </ul>
