--- a/animals.html
+++ b/animals.html
@@ -71,9 +71,8 @@
 <div class="card__title">American Foxhound</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> North-America</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Type:</strong> Hound</li>
 <li><strong>Lifespan:</strong> 10 to 12 years</li>
 <li><strong>Color:</strong> BlackWhiteTan</li>
@@ -84,9 +83,8 @@
 <div class="card__title">Arctic Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Carnivore</li>
 <li><strong>Location:</strong> Eurasia</li>
+<li><strong>Diet:</strong> Carnivore</li>
 <li><strong>Type:</strong> Mammal</li>
 <li><strong>Lifespan:</strong> 7 - 10 years</li>
 <li><strong>Color:</strong> GreyBlackWhite</li>
@@ -97,9 +95,8 @@
 <div class="card__title">Cross Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Carnivore</li>
 <li><strong>Location:</strong> North-America</li>
+<li><strong>Diet:</strong> Carnivore</li>
 <li><strong>Type:</strong> mammal</li>
 <li><strong>Lifespan:</strong> 10 to 15 years in captivity, seven years in the wild</li>
 <li><strong>Color:</strong> RedBlackSilver</li>
@@ -110,9 +107,8 @@
 <div class="card__title">Darwin’s fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> South-America</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Type:</strong> Mammal</li>
 <li><strong>Lifespan:</strong> Seven years</li>
 <li><strong>Color:</strong> GreyRedBlack</li>
@@ -123,9 +119,8 @@
 <div class="card__title">English Foxhound</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Europe</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Lifespan:</strong> 10 to 13 years</li>
 <li><strong>Color:</strong> BlackWhiteTanMulti-colored</li>
 </ul>
@@ -135,9 +130,8 @@
 <div class="card__title">Fennec Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Africa</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Lifespan:</strong> 10 - 14 years</li>
 <li><strong>Color:</strong> WhiteCreamSandy</li>
 </ul>
@@ -147,9 +141,8 @@
 <div class="card__title">Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Carnivore</li>
 <li><strong>Location:</strong> Africa</li>
+<li><strong>Diet:</strong> Carnivore</li>
 <li><strong>Type:</strong> Mammal</li>
 <li><strong>Lifespan:</strong> 3 - 11 years</li>
 <li><strong>Color:</strong> BrownRedBlackTan</li>
@@ -160,9 +153,8 @@
 <div class="card__title">Fox Snakes</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Carnivore</li>
 <li><strong>Location:</strong> North-America</li>
+<li><strong>Diet:</strong> Carnivore</li>
 <li><strong>Lifespan:</strong> approximately 20 years</li>
 <li><strong>Color:</strong> BrownGreyBeigeChestnut</li>
 </ul>
@@ -172,9 +164,8 @@
 <div class="card__title">Fox Squirrel</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Central-America</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Type:</strong> rodent</li>
 <li><strong>Lifespan:</strong> 6-12.6 years</li>
 <li><strong>Color:</strong> BrownGrey-Brown</li>
@@ -185,9 +176,8 @@
 <div class="card__title">Fox Terrier</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Europe</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Lifespan:</strong> 14 years</li>
 </ul>
 </div>
@@ -196,9 +186,8 @@
 <div class="card__title">Golden-Crowned Flying Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Herbivore</li>
 <li><strong>Location:</strong> Asia</li>
+<li><strong>Diet:</strong> Herbivore</li>
 <li><strong>Lifespan:</strong> unknown</li>
 <li><strong>Color:</strong> BlackGold</li>
 </ul>
@@ -208,9 +197,8 @@
 <div class="card__title">Gray Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Central-America</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Type:</strong> Mammal</li>
 <li><strong>Lifespan:</strong> 6-12 years</li>
 <li><strong>Color:</strong> GreyRedBlackWhite</li>
@@ -221,9 +209,8 @@
 <div class="card__title">Kit Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Central-America</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Type:</strong> mammal</li>
 <li><strong>Lifespan:</strong> seven years in the wild. 12 years in captivity</li>
 <li><strong>Color:</strong> GreyYellowBlackWhite</li>
@@ -234,9 +221,8 @@
 <div class="card__title">Marble Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> North-America</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Type:</strong> Mammal</li>
 <li><strong>Lifespan:</strong> Up to 15 years</li>
 <li><strong>Color:</strong> BrownBlackWhite</li>
@@ -247,9 +233,8 @@
 <div class="card__title">Red Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Africa</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Lifespan:</strong> 2-4 years in the wild, 10-12 in captivity</li>
 <li><strong>Color:</strong> BrownGreyRedBlackSilver</li>
 </ul>
@@ -259,9 +244,8 @@
 <div class="card__title">Smooth Fox Terrier</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Europe</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Lifespan:</strong> 12 – 15 years</li>
 <li><strong>Color:</strong> BrownBlackWhiteTan</li>
 </ul>
@@ -271,9 +255,8 @@
 <div class="card__title">Tibetan Fox</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Carnivore</li>
 <li><strong>Location:</strong> Asia</li>
+<li><strong>Diet:</strong> Carnivore</li>
 <li><strong>Type:</strong> Mammal</li>
 <li><strong>Lifespan:</strong> 8-10 years</li>
 <li><strong>Color:</strong> GreyTan</li>
@@ -284,9 +267,8 @@
 <div class="card__title">Toy Fox Terrier</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> North-America</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Lifespan:</strong> 11-14 years</li>
 <li><strong>Color:</strong> BlackWhiteTanChocolate</li>
 </ul>
@@ -296,9 +278,8 @@
 <div class="card__title">Wire Fox Terrier</div>
 <div class="card__text">
 <ul>
-<li>
-<strong>Diet:</strong> Omnivore</li>
 <li><strong>Location:</strong> Europe</li>
+<li><strong>Diet:</strong> Omnivore</li>
 <li><strong>Lifespan:</strong> 13 – 14 years</li>
 <li><strong>Color:</strong> BlackWhiteTan</li>
 </ul>
